# OTUS_HW7

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  main.cpp
.github/workflows/: cmake-single-platform.yml
